Add assertions project.